--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,7 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
-
+span {
+    color: white;
+}
 .filters {
   background: white;
   width: 100%;
